--- a/about.html
+++ b/about.html
@@ -13,7 +13,20 @@
 
 <body>
     <div class="container about-page">
-     
+      <nav>
+        <div class="navBar"> 
+            <div class="lambdaLogo">
+            <img src="img/lambda-black.png" alt="Lambda Logo">
+            </div>
+            <div class="links"><a href="#">Home</a></div>
+            <div class="links"><a href="about.html">About</a></div>
+            <div class="links"><a href="#">Products</a></div>
+            <div class="links"><a href="#">Blog</a></div>
+            <div class="links"><a href="#">Contact</a></div>
+        </div>
+    </nav>
+    <section class="main-image">
+    </section>
     About
 
     Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
