--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="lambdaLogo">
                 <img src="img/lambda-black.png" alt="Lambda Logo">
                 </div>
-                <div class="links"><a href="#">Home</a></div>
+                <div class="links"><a href="index.html">Home</a></div>
                 <div class="links"><a href="about.html">About</a></div>
                 <div class="links"><a href="#">Products</a></div>
                 <div class="links"><a href="#">Blog</a></div>
@@ -78,8 +78,8 @@
         
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
