--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <footer>
         <nav>
           <div><a href="index.html">Home</a></div>
-          <div><a href="#">About</a></div>
+          <div><a href="about.html">About</a></div>
           <div><a href="#">Products</a></div>
           <div><a href="#">Blog</a></div>
           <div><a href="#">Contact</a></div>
