--- a/about.html
+++ b/about.html
@@ -13,9 +13,12 @@
 
 <body>
     <div class="container about-page">
+
+
+      <!-- Nav bar -->
       <nav>
         <div class="navBar"> 
-            <div class="lambdaLogo">
+            <div>
             <img src="img/lambda-black.png" alt="Lambda Logo">
             </div>
             <div class="links"><a href="index.html">Home</a></div>
@@ -25,6 +28,9 @@
             <div class="links"><a href="#">Contact</a></div>
         </div>
     </nav>
+
+
+    <!-- main image  -->
     <section class="main-image">
     </section>
     <section class="about">
@@ -33,7 +39,7 @@
     </section>
 
 
-
+    <!-- main content  -->
     <section class="boxes">
       <div class="boxes box1">
         <img src="img/about-plan.png" alt="strategy">
