--- a/about.html
+++ b/about.html
@@ -29,15 +29,15 @@
         </div>
     </nav>
 
-
+    
     <!-- main image  -->
-    <section class="main-image">
-    </section>
+    <img class="main-image" src="img/jumbo-about.png" alt="Photo of city skyline">
+    
+    <!-- about section  -->
     <section class="about">
       <h2>About</h2>
       <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
     </section>
-
 
     <!-- main content  -->
     <section class="boxes">
