--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         </nav>     
         
         <!-- main-image section  -->
-        <section class="main-image">
-        </section>
+        <img class="main-image" src="img/jumbo.jpg" alt="Photo of light stream">
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
